--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-    <title>My Site Title</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-<body>
-    
-</body>
-</html>
+<h1>Hello World!</h1>
