--- a/index.html
+++ b/index.html
@@ -10,3 +10,18 @@
 
 <li>1 tbsp of butter</li>
 </ul>
+
+<ol>
+<li>spread butter on bread</li>
+<li>Place bread in frying pan fry</li>
+<li>Add cheese on top bread</li>
+<li>Cover with second slice of bread</li>
+<li>Turn over and fry for 2 minutes</li>
+
+
+
+
+
+
+
+</ol>
