--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
-<ul>
-<li>2 slices of bread</li>
-<li>4 slices of cheese</li>
-<ul>
-<li>cheddar</li>
-<li>mozzarella</li>
-<li>pepper jack</li>
+<!DOCTYPE html>
+<head>
+    <body>
+<table>
 
-</ul>
+<tr>
+<th>City</th>
+<th>State</th>
+<th>2017 estimate</th>
+</tr>
 
-<li>1 tbsp of butter</li>
-</ul>
+<tr>
+    <td>New York</td>
+    <td>New York</td>
+    <td>8,622,698</td>
+</tr>
 
-<ol>
-<li>spread butter on bread</li>
-<li>Place bread in frying pan fry</li>
-<li>Add cheese on top bread</li>
-<li>Cover with second slice of bread</li>
-<li>Turn over and fry for 2 minutes</li>
+<tr>
+    <td>los Angeles</td> 
+    <td>California</td>
+    <td>3,999,759</td>
+</tr>
 
+<tr>
+    <td>Chicago</td>
+    <td>Illinois</td>
+    <td>2,716,450</td>
+</tr>
 
+<tr>
+    <td>Houston</td>
+    <td>Texas</td>
+    <td>2,312,717</td>
 
+</tr>
 
-
-
-
-</ol>
+</table>
+</head>
+</html>
