--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image</title>
+    <title>css lab</title>
 </head>
-<body>  
-   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
-   <img alt="A lion" />
-   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion" title="Wild Animals"/>
-
-
+<link rel="stylesheet" href="style.css" />
+<body>
+  <h1>Styling Html Documents</h1>  
+  <p>first we open index.html.Then we create a file called style.css and linl the files using the link rel element and href style.css</p>
 </body>
 </html>
- <img
-
